--- a/css/master.css
+++ b/css/master.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
-html, body {
+.body {
     color:#333;
     background:#002F2F/*#232f2e*/;
     line-height:1.3;
     margin:0;
     padding:0;
     font-family: 'Lucida Grande', arial, sans-serif;
+	font-size: 13px !important;
 }
 a {
     color:#636363;
@@ -61,6 +62,11 @@ code {
     margin:0;
     padding:0;
 }
+
+#conent ul, #content li {
+	margin-left:25px;
+}
+
 #wrapper ul, #wrapper li {
     list-style:disc;
 }
@@ -89,7 +95,7 @@ ul#nav {
 ul#nav li {
     display:inline;
     padding:0 0 0 2px;
-    font-size: 1.2em;
+    font-size: 16px;;
     font-weight: bold;
 }
 ul#nav a, .highlighted {
@@ -149,9 +155,6 @@ label {
     font-size: 1.2em;
     line-height: 2em;
 }
-ul.tagit {
-    width: 495px;
-}
 
 #tag-icon {
     float: left;
@@ -163,10 +166,10 @@ ul.tagit {
     display: block;
 }
 #title-keypad {
-    font-size: 1.2em;
+    font-size: 41px;
 }
 #title-sencha {
-    font-size: .75em;
+    font-size: 25px;
     font-weight: normal;
     position: relative;
     left: .2em;
